@@ -198,6 +198,7 @@ AK.Lang.Mechanic.Orb:SetFrench("Orbe de suffocation")
 AK.Lang.Mechanic.Summon = KBM.Language:Add("Summon the Abyss")
 AK.Lang.Mechanic.Summon:SetGerman("Beschwört den Abgrund!")
 AK.Lang.Mechanic.Summon:SetRussian("Воззвание к глубинам")
+AK.Lang.Mechanic.Summon:SetFrench("Invoque les Abysses")
 AK.Lang.Mechanic.Emerge = KBM.Language:Add("Akylios emerges")
 AK.Lang.Mechanic.Emerge:SetGerman("Akylios taucht auf")
 AK.Lang.Mechanic.Emerge:SetRussian("КРАБ ВСПЛЫВАЕТ ПОСАНЫ!")
