@@ -204,7 +204,7 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options = {}
 	KBMLM.SetGroupObject(KBM.Language.Options, "GroupObject", "General and Main options")
 	KBM.Language.Options.CastbarOverride = KBM.Language:Add("Castbar: Override")
-	KBM.Language.Options.CastbarOverride:SetGerman("Zauberbalken: Einstellungen")
+	KBM.Language.Options.CastbarOverride:SetGerman("separate Einstellungen")
 	KBM.Language.Options.CastbarOverride:SetRussian("Кастбар: Переопределить")
 	KBM.Language.Options.Pinned = KBM.Language:Add("Pin to ")
 	KBM.Language.Options.Pinned:SetGerman("Anheften an ")
@@ -223,11 +223,11 @@ function KBMLM.SetMain_Lang()
 
 	-- Timer Options
 	KBM.Language.Options.MechTimerOverride = KBM.Language:Add("Mechanic Timers: Override")
-	KBM.Language.Options.MechTimerOverride:SetGerman("Mechanik Timer: Einstellungen")
+	KBM.Language.Options.MechTimerOverride:SetGerman("separate Einstellungen")
 	KBM.Language.Options.MechTimerOverride:SetRussian("Таймеры механики: Переопределить")
 	KBM.Language.Options.MechTimerOverride:SetFrench("Timers de Mécanisme: Override")
 	KBM.Language.Options.EncTimerOverride = KBM.Language:Add("Encounter Timer: Override")
-	KBM.Language.Options.EncTimerOverride:SetGerman("Boss Timer: Einstellungen")
+	KBM.Language.Options.EncTimerOverride:SetGerman("separate Boss Timer: Einstellungen")
 	KBM.Language.Options.EncTimerOverride:SetRussian("Таймер боя: Переопределить")
 	KBM.Language.Options.EncTimerOverride:SetFrench("Timers combat: Override")
 	KBM.Language.Options.EncTimers = KBM.Language:Add("Encounter Timers enabled")
@@ -271,7 +271,7 @@ function KBMLM.SetMain_Lang()
 
 	-- Phase Monitor
 	KBM.Language.Options.PhaseMonOverride = KBM.Language:Add("Phase Monitor: Override")
-	KBM.Language.Options.PhaseMonOverride:SetGerman("Phasen Monitor: Einstellungen")
+	KBM.Language.Options.PhaseMonOverride:SetGerman("separate Phasen Monitor: Einstellungen")
 	KBM.Language.Options.PhaseMonOverride:SetRussian("Монитор фаз: Переопределить")
 	KBM.Language.Options.PhaseMonOverride:SetFrench("Мoniteur Phase: Override")
 	KBM.Language.Options.PhaseMonitor = KBM.Language:Add("Phase Monitor")
@@ -279,7 +279,7 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.PhaseMonitor:SetRussian("Монитор фаз")
 	KBM.Language.Options.PhaseMonitor:SetFrench("Moniteur Phase")
 	KBM.Language.Options.PhaseEnabled = KBM.Language:Add("Enable Phase Monitor")
-	KBM.Language.Options.PhaseEnabled:SetGerman("Phasen Monitor aktiviert")
+	KBM.Language.Options.PhaseEnabled:SetGerman("Phasen Monitor anzeigen")
 	KBM.Language.Options.PhaseEnabled:SetRussian("Монитор фаз: активирован")
 	KBM.Language.Options.PhaseEnabled:SetFrench("Activer Moniteur Phase")	
 	KBM.Language.Options.Phases = KBM.Language:Add("Display current Phase")
@@ -331,14 +331,14 @@ function KBMLM.SetMain_Lang()
 
 	-- Alert related
 	KBM.Language.Options.AlertsOverride = KBM.Language:Add("Alerts: Override")
-	KBM.Language.Options.AlertsOverride:SetGerman("Alarmierungs: Einstellungen")
+	KBM.Language.Options.AlertsOverride:SetGerman("separate Einstellungen")
 	KBM.Language.Options.AlertsOverride:SetRussian("Предупреждения: Переопределить")
 	KBM.Language.Options.Alert = KBM.Language:Add("Screen Alerts")
 	KBM.Language.Options.Alert:SetGerman("Alarmierungen")
 	KBM.Language.Options.Alert:SetFrench("Alerte \195\160 l'\195\169cran")
 	KBM.Language.Options.Alert:SetRussian("Предупреждения на экране")
 	KBM.Language.Options.AlertsEnabled = KBM.Language:Add("Screen Alerts enabled")
-	KBM.Language.Options.AlertsEnabled:SetGerman("Bildschirm Alarmierungen aktiviert")
+	KBM.Language.Options.AlertsEnabled:SetGerman("Alarmierungen aktiviert")
 	KBM.Language.Options.AlertsEnabled:SetFrench("Alerte \195\160 l'\195\169cran activ\195\169")
 	KBM.Language.Options.AlertsEnabled:SetRussian("Отображать предупреждения на экране")
 	KBM.Language.Options.AlertFlash = KBM.Language:Add("Screen flash enabled")
@@ -383,6 +383,17 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.UnlockAlpha:SetRussian("Разблокировать прозрачность")
 	KBM.Language.Options.UnlockAlpha:SetFrench("Débloquer transparence")
 
+	-- Main Options Dictionary
+	KBM.Language.Menu = {}
+	KBM.Language.Menu.Global = KBM.Language:Add("Global Options")
+	KBM.Language.Menu.Timers = KBM.Language:Add("Timers")
+	KBM.Language.Menu.Enable = KBM.Language:Add("Enable")
+	KBM.Language.Menu.Filters = KBM.Language:Add("filters")
+	KBM.Language.Menu.Castbars = KBM.Language:Add("cast-bars")
+	KBM.Language.Menu.Castbars:SetFrench("barres-cast")
+	KBM.Language.Menu.Castbars:SetGerman("zauberbalken")
+	KBM.Language.Menu.Castbars:SetRussian("Кастбары")
+	
 	-- Misc.
 	KBM.Language.Options.Character = KBM.Language:Add("Saving settings for this character only")
 	KBM.Language.Options.Character:SetGerman("Einstellungen nur für diesen Charakter speichern")
